# AAC-Editor

./: .gitattributes  .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  BUILD_EXE.bat  CONTRIBUTING.md  EASY_INSTALL_GUIDE.md  FREE_EDITION_GUIDE.md  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  OLLAMA_INTEGRATION.md  ONE_CLICK_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_ADVANCED.md  README.md  README_ADVANCED.md  SECURITY.md  START_HERE.md  UI_GUIDE.md  WHATS_NEW.md  build_installer.py  demo.py  example_batch.csv  inspect_pageset.py  launch.bat  launch.sh  launch_advanced.bat  launch_advanced.sh  launch_free.bat  launch_free.sh  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  requirements_free.txt  td_snap_ai_assistant.py  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: package-smoke.yml  release.yml  tests.yml
docs/: IMPORT_SAFETY.md  UIACCESS_TESTING.md
packaging/: aac-editor.manifest  build.ps1  installer.iss  launcher.py  release-constraints.txt  smoke_test.ps1  tdsnap.spec  verify_manifest.ps1
scripts/: dump_schema_snapshot.py  fetch_fixture.py  make_icon.py
skills/td-snap-live-editor/: SKILL.md
tdsnap/: __init__.py  builder.py  cli.py  colors.py  errors.py  grid3.py  live.py  pageset.py  schema.py  templates.py  ticks.py  validate.py
tdsnap/web/: __main__.py  desktop.py  grounding.py  localai.py  ollama.py  prompts.py  server.py
tests/: conftest.py  test_ai.py  test_ai_smoke.py  test_builder.py  test_cli.py  test_fixture_fetch.py  test_grid3.py  test_integration_example.py  test_live.py  test_live_edit.spec.js  test_packaging.py  test_schema.py  test_validate.py  test_web.py
tests/fixtures/: schema_snapshot.sql
videos/aac-editor-private/: STORYBOARD.md  index.html  meta.json  package.json
videos/aac-editor-review/: STORYBOARD.md  frame.md  index.html  meta.json  package.json
videos/aac-editor-speed/: STORYBOARD.md  index.html  meta.json  package.json
videos/td-snap-page-builder-live-world-cup-promo/: BRIEF.md  SCRIPT.md  STORYBOARD.md  audio_meta.json  caption_groups.json  frame.md  (+4 more)
(+175 files in other folders)
